# codility

./: CMakeLists.txt  README.md  make_run.bat
exercises/: CMakeLists.txt  main.cpp
exercises/add/include/: add.h
exercises/add/source/: add.cpp
exercises/binary_gap/: README.md
exercises/binary_gap/include/: binary_gap.h
exercises/binary_gap/source/: binary_gap.cpp
exercises/count_conforming_bitmasks/: CMakeLists.txt  README.md
exercises/count_conforming_bitmasks/include/: count_conforming_bitmasks.h
exercises/count_conforming_bitmasks/source/: count_conforming_bitmasks.cpp
exercises/longest_password/: README.md
exercises/longest_password/include/: longest_password.h
exercises/longest_password/source/: longest_password.cpp
exercises/sparse_binary_decomposition/: README.md
exercises/sparse_binary_decomposition/include/: sparse_binary_decomposition.h
exercises/sparse_binary_decomposition/source/: sparse_binary_decomposition.cpp
exercises/swap/include/: swap.h
exercises/swap/source/: swap.cpp
scripts/add_exercise/: add_exercise.py
scripts/add_exercise/templates/: CMakeListsExeUpd.template  CMakeListsUtUpd.template  README.template  header.template  source.template  test.template
src/: main.cpp  sample.cpp  sample.h
test/: CMakeLists.txt  Sample_test.cpp  test_add.cpp  test_binary_gap.cpp  test_sparse_binary_decomposition.cpp  test_swap.cpp
tests/: CMakeLists.txt  test_binary_gap.cpp  test_count_conforming_bitmasks.cpp  test_longest_password.cpp
